feat(all): add uploadDocTemplate

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "semi": false,
+  "endOfLine": "auto",
+  "printWidth": 120,
+  "tabWidth": 2,
+  "bracketSameLine": true
 }
